2002-12-05  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCompile.c (TclCleanupByteCode): When encountering a
	  shared bytecode structure we have to scan the literal table in
	  that structure for objects of type "cmdName". These objects hold
	  references to command structures, possibly in a different
	  interp, and interfere with the cleanup of the refered commands
	  (they keep their refcount up). Essentially at least one interp
	  in a set of clones has a circular reference comand -> proc ->
	  bytecode -> bytecode data -> cmdName obj -> command which
	  prevents the command int that interp from being freed, leaking
	  memory.

	  The solution employed here is to invalidate the internal
	  representation of 'cmdName's (but keeping the string rep),
	  driving the refcount of refered command structures down,
	  and breaking the cycle.

2002-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclTest.c (TestCloneObjCmd): objify testclone command.

	* generic/tclLiteral.c (LiteralThreadExitProc): do no delete
	literal table in thread exit handler.  This causes a crash
	sometimes that must be further explored.

2002-11-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclBasic.c (Tcl_CloneInterp): Moved 'TclCreateExecEnv'
	  behind 'CloneNamespace'. This fixes the last leak found. The
	  function creates a variable 'tcl_traceExec', and links a C
	  variable to it. Running 'CloneNamespace' afterward overwrites
	  the pointer, leaking the structure created by
	  'TclCreateExecEnv'.

2002-11-26  Andreas Kupries  <andreask@activestate.com>

	* tclBasic.c (CloneVariable): The initialization of the refCount
	  for the cloned variable assumed that all variables are namespace
	  variables. This is not true. Globals are not marked as in a
	  namespace. This caused the system to skip freeing all global
	  variables in a cloned interpreter. Changed to explicitly check
	  the variable if it is namespace'd.

2002-11-26  Jeff Hobbs  <jeffh@ActiveState.com>
